fixed-z-index

--- a/app/assets/stylesheets/layout/_home_navbar.scss
+++ b/app/assets/stylesheets/layout/_home_navbar.scss
@@ -8,6 +8,7 @@
   justify-content: space-between;
   position: absolute;
   width: 100%;
+  z-index: 1;
 }
 
 /* Optional class to fix the navbar on top */
